--- a/templates/about.html
+++ b/templates/about.html
@@ -70,7 +70,7 @@
                         <p><b>Address</b></p>
                         <p>Post Office Box TI515</p>
                         <p>Accra West, Ghana</p>
-                    </div>
+                    </div><br><br>
                 </div>
                 
                 <div class="contact-form" id="contact">
