--- a/templates/give.html
+++ b/templates/give.html
@@ -10,16 +10,17 @@
 
                 <div class="verse">
                     <h1>For God loves a cheerful giver</h1>
-                    <p><b>If our activities touch your heart and you wish to support us in any way, you can use the below means to send your gift and God will bless and increase your barn</b></p><br><br>
+                    <p>If our activities touch your heart and you wish to support us in any way, you can use the below means to send your gift and God will bless and increase your barn</p><br><br>
                 </div>
 
                 <div class="accounts">
-                    <p>Reference Name: <b>Cofie Bekoe</b></p>
-                    <p>MTN Mobile Money: 0544898989</p><br><br>
-                    <p><b>You can also send your gifts through our Bank Account</b></p>
+                    <h1>Reference Name: Cofie Bekoe</h1>
+                    <p>MTN Mobile Money: 0544898989</p><br>
+                    
+                    <h1>You can also send your gifts through our Bank Account</h1>
                     <p>GCB Bank, Accra West Branch</p>
                     <p>Taifa</p>
-                    <p>Account Number: <b>4226548975642</b></p>
+                    <p>Account Number: 4226548975642</p>
                 </div>
 
             </section>
