--- a/templates/index.html
+++ b/templates/index.html
@@ -108,16 +108,19 @@
                     <div class="main-upcoming-events lazy fade-in">
 
                         <div class="venue">
-                            <p>EVERY TUESDAY | 6:00PM - 8:30PM</p>
-                            <h2>MIDWEEK PRAYER SERVICE</h2>
+                            <p>WEDNESDAYS | 6:30PM - 8:30PM</p>
+                            <h2>MIDWEEK SERVICE - TABERNACLE WITH US</h2>
                         </div>
                     </div>
 
                     <div class="main-upcoming-events lazy fade-in">
 
                         <div class="venue">
-                            <p>EVERY SUNDAY | 9:30AM - 12:00 NOON</p>
-                            <h2>MIRACLE SERVICE</h2>
+                            <p>AKAN SERVICE | 07:00AM - 09:00AM</p>
+                            <h2>AKAN SERVICE</h2><br>
+                            <hr><br>
+                            <p>ENGLISH SERVICE | 09:30AM - 12:00PM</p>
+                            <h2>FEAST OF MANNER</h2>
                         </div>
                     </div>
 
