setup a bucket for media and static files

--- a/templates/index.html
+++ b/templates/index.html
@@ -183,6 +183,10 @@
 
     <script src="{% static 'js/script.js' %}"></script>
     <script>
+        // const aboutImageSide = document.querySelector(".about-image-side p");
+        // console.log(aboutImageSide);
+
+
         const date = new Date().getFullYear();
         const setDate = document.getElementById('date');
         setDate.innerHTML = `Copyright &copy` + date;
