--- a/templates/rsvp-popup.html
+++ b/templates/rsvp-popup.html
@@ -8,13 +8,13 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
-            font-family: "TT-Firs-Neue-Trial-Regular";
+            font-family: "TT-Firs-Neue-Trial-Medium";
         }
         p, h1, h2{
-            font-family: "TT-Firs-Neue-Trial-Regular";
+            font-family: "TT-Firs-Neue-Trial-Medium";
         }
         .row{
-            margin: 20px 100px;
+            margin: 20px 150px;
             padding: 20px;
             background-color: #fff;
         }
@@ -26,7 +26,7 @@
         }
         .rsvp img{
             width: 100%;
-            height: 20rem;
+            height: 22rem;
         }
         @media screen and (max-width:600px){
             .row{
@@ -49,16 +49,16 @@
                 <div class="rsvp">
                     <div class="event-title-date">
                         <h2>{{event.name}}</h2>
-                        <p>{{event.event_date}}</p>
+                        <p>{{event.event_date}}</p><br>
+                        <div class="card">
+                            <h2>MINISTER DETAILS</h2>
+                            <h4>{{event.rsvp.designation}} {{event.rsvp.rs_vp}}</h4>
+                            <p>{{event.rsvp.contact}}</p>
+        
+                            <p>{{event.rsvp.designation}}</p>
+                        </div>
                     </div>
                     <img src="{{event.event_poster.url}}" alt="event image">
-                </div>
-                <div class="card">
-                    <h2>MINISTER DETAILS</h2>
-                    <h4>{{event.rsvp.designation}} {{event.rsvp.rs_vp}}</h4>
-                    <p>{{event.rsvp.contact}}</p>
-
-                    <p>{{event.rsvp.designation}}</p>
                 </div>
         
             </div>
