modified about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -50,11 +50,11 @@
                         </div>
                         <div class="ambitions fade-in" id="mission">
                             <h1>Our Vision</h1>
-                            <p>Our mission is to awaken the Zoe, god-kind of life in every man on the earth, to manifest and demonstrate the authority and power of God through the knowldge of <b>Jesus Christ.</b></p>
+                            <p>Our vision is to awaken the world to the knowledge of <b>Jesus Christ,</b> saving lost souls and transforming them into the mindset that they are a Christ. Bringing them into the God class to leave as Gods, manifesting and demonstrating the authority and power of God</p>
                         </div>
                         <div class="ambitions fade-in lozad" id="church">
                             <h1>Our Mission</h1>
-                            <p>Our mission is to win souls for <b>Christ</b> by any means possible through His saving knowledge and redemptive life-transforming power.</p>
+                            <p>Our mission is to make the gospel of Jesus Christ available to the world through different platforms to win souls and transform lives.</p>
                         </div>
 
                     </div>
