--- a/static/css/style.css
+++ b/static/css/style.css
@@ -273,6 +273,8 @@ p{
     }
     .hero-banner p{
         padding: 12px 50px;
+        color: rgb(0, 0, 0);
+        background-color: #fbfdff80;
     }
 
     .sermon iframe{
