--- a/templates/give.html
+++ b/templates/give.html
@@ -4,25 +4,26 @@
     {% block content %}
     <link rel="stylesheet" href="{% static 'css/give.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/lozad/dist/lozad.min.js"></script>
+    <script src="https://cdn.tailwindcss.com"></script>
 
         <main class="main-body" id="main-body">
-            <section class="body-section">
+            <section class="body-section my-10">
 
-                <div class="verse">
-                    <h1>For God loves a cheerful giver</h1>
-                    <p>If our activities touch your heart and you wish to support us in any way, you can use the below means to send your gift and God will bless and increase your barn</p><br><br>
+                <div class="center text-center">
+                    <h2>FOR GOD LOVES A CHEERFUL GIVER</h2>
+                    <p>If our activities touch your heart and you wish to support us in any way, you can use the below means to send your gift and God will bless and increase your barn</p>
                 </div>
 
-                <div class="accounts">
-                    <h1>Reference Name: Cofie Bekoe</h1>
-                    <p>MTN Mobile Money: 0544898989</p><br>
+                <div class="border border-black-50 hover:border-black-50 bg-black-800 text-center">
+                    <h2 class="my-2 font-200">YOU CAN SEND YOUR GIFTS THROUGH THE FOLLOWING MEANS</h2>
+
+                    <h3>REFERENCE NAME: COFIE BEKOE</h3>
+                    <p>MTN Mobile Money: 0544898989</p>
                     
-                    <h1>You can also send your gifts through our Bank Account</h1>
                     <p>GCB Bank, Accra West Branch</p>
                     <p>Taifa</p>
                     <p>Account Number: 4226548975642</p>
                 </div>
-
             </section>
         </main>
     {% endblock content %}
