fixes in the home and about

--- a/templates/about.html
+++ b/templates/about.html
@@ -26,6 +26,8 @@
                         <div class="our-leaders-indiv fade-in">
                            <img src="{% static './img/prophetbk.jpg' %}" alt="our leaders">
                            <h2 for="img">PROPHET COFIE POWERMAN BEKOE</h2>
+                           <p>Cofie Bekoe Ministries is a global organization founded by Prophet Powerman Bekoe, a dynamic preacher of the Gospel of Jesus Christ with a special grace in the Apostolic and the Prophetic.</p>
+                           <p>The ministry's mission is to win souls, demonstrate God's love, live according to God's Word and become the Word.</p>
                         </div>
                         <div class="our-leaders-indiv fade-in">
                             <img src="{% static './img/prophets.jpg' %}" alt="our leaders">
