--- a/templates/index.html
+++ b/templates/index.html
@@ -54,7 +54,7 @@
                 <div class="main-items">
                     <div class="about-text-side lazy fade-in">
                         <p>We are an assignment of God established upon the earth to fulfill the will of God.</p>
-                        <p>A ministry of God through the Holy Spirit to send <b>Jesus</b> to the world.</p>
+                        <p>A ministry empowered by the Holy Spirit to proclaim the Gospel of the kingdom of God to the world <b>Jesus</b> to the world.</p>
         
                         <p>We are physically located in Ghana and Spiritually located in God, empowered by the <b>Holy Spirit</b> to do everything possible for <b>Jesus</b> to be known across the world.</p>
                         <a href="{% url 'about' %}">Read More</a>
@@ -126,10 +126,10 @@
                 <div class="major-upcoming-event lazy fade-in">
                     <div class="major-event">
                         <p style="text-transform: uppercase;">{{event.event_date | date:"l F, j Y" }} | {{event.from_time|time:"h:ia"}} - {{event.to_time|time:"h:ia"}}</p>
-                        <h1>{{ event.name | upper }}!</h1>
+                        <h1>{{ event.name | upper }}</h1>
                     </div>
                     <div style="display: flex; justify-content: center;">
-                        <a style="text-align: center;" href="church/about#contact">MORE</a>
+                        <a style="text-align: center;" href="{% url 'events' %}">MORE</a>
                     </div>
                     
                 </div>
