--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -119,7 +119,7 @@ p{
 
 .hero-banner-comps p{
     font-family: "TT-Firs-Neue-Trial-Medium";
-    color: rgb(255, 247, 247);
+    color: rgb(0, 0, 0);
 }
 
 .hero-banner-comps a:hover {
@@ -278,7 +278,7 @@ p{
     }
     .hero-banner p{
         padding: 12px 50px;
-        
+        color: whitesmoke;
         background-color: #fbfdff3d;
     }
 
