--- a/church/static/css/gallery.css
+++ b/church/static/css/gallery.css
@@ -40,9 +40,11 @@
 }
 
 .top-img-block img{
-    height: 20rem;
+    /* height: 20rem; */
     width: 100%;
     border-radius: 10px;
+    object-fit: contain;
+    aspect-ratio: 3/2;
 }
 
 .top-img-block img:hover{
