--- a/static/css/gallery.css
+++ b/static/css/gallery.css
@@ -31,8 +31,8 @@
 }
 
 .main-gallery p{
-    /* font-family: "Poppins"; */
-    font-family: "Popins";
+    font-family: "TT-Firs-Neue-Trial-Medium";
+    text-align: center;
 }
 
 .top-img-block{
@@ -40,10 +40,10 @@
 }
 
 .top-img-block img{
-    height: 22rem;
     width: 100%;
     border-radius: 10px;
-
+    object-fit: contain;
+    aspect-ratio: 16/9;
 }
 
 .top-img-block img:hover{
@@ -65,10 +65,7 @@
         width: 100%;
     }
     .top-img-block img {
-        height: 18rem;
+        height: 15rem;
         width: 100%;
-    }
-    .top-img-block img{
-        height: 22rem;
     }
 }
