--- a/templates/index.html
+++ b/templates/index.html
@@ -54,9 +54,9 @@
                 <div class="main-items">
                     <div class="about-text-side lazy fade-in">
                         <p>We are an assignment of God established upon the earth to fulfill the will of God.</p>
-                        <p>A ministry empowered by the Holy Spirit to proclaim the Gospel of the kingdom of God to the world <b>Jesus</b> to the world.</p>
+                        <p>A ministry empowered by the Holy Spirit to proclaim the Gospel of the kingdom of God to the World</p>
         
-                        <p>We are physically located in Ghana and Spiritually located in God, empowered by the <b>Holy Spirit</b> to do everything possible for <b>Jesus</b> to be known across the world.</p>
+                        <p>We are physically located in Ghana and Spiritually located in God, empowered by the <b>Holy Spirit</b> to do everything possible for <b>Jesus</b> to be known across the World.</p>
                         <a href="{% url 'about' %}">Read More</a>
                     </div>
 
