--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
             {% block content %}
             <div class="hero-banner">
                 <div class="hero-banner-comps">
-                    <h1>WELCOME TO PROPHET COFIE POWERMAN BEKOE MINISTRY</h1>
+                    <h1>WELCOME TO PROPHET COFIE BEKOE MINISTRY</h1>
                     <p>"For God so loved the world that he gave his one and only son, that whoever believes in him shall not perish but have eternal life." - JOHN 3:2</p><br>
                     <a href="{% url 'events' %}">CONNECT &rarr;</a>
                 </div>
@@ -162,10 +162,10 @@
             <div class="footer lozad">
                 <h1>FIND US ON SOCIAL MEDIA</h1>
                 <span class="social-links">
-                    <a href="#"><img src="/static/img/facebook.svg" alt="">
+                    <a href="https://www.facebook.com/100070673075307/posts/267725212259913/?mibextid=rS40aB7S9Ucbxw6v"><img src="/static/img/facebook.svg" alt="">
                     </a>
                     <a href="#"><img src="{% static './img/tweeticon.svg' %}" alt=""></a>
-                    <a href="#"><img src="{% static './img/insta.svg' %}" alt=""></a>
+                    <a href="https://instagram.com/cofiebekoe?igshid=YmMyMTA2M2Y="><img src="{% static './img/insta.svg' %}" alt=""></a>
                     <a href="https://www.youtube.com/@prophetpowermanbekoe1295" target="_blank"><img src="{% static './img/tube.svg' %}" alt=""></a>
                 </span>
             </div>
