setup ready for production

--- a/church/static/css/style.css
+++ b/church/static/css/style.css
@@ -3,9 +3,17 @@
     font-family: 'TT-Firs-Neue-Trial-Medium';
     font-style: normal;
     font-weight: bold;
-    src: local('TT Firs Neue'), url('/static/fonts/TT Firs Neue Trial Medium.ttf') format('opentype');
+    src: local('TT Firs Neue'), url('/static/fonts/TT Firs Neue Trial Medium.ttf') format('opentype'),
+        url('/static/fonts/TT Firs Neue Trial Regular.ttf') format('truetype');
 }
 
+
+/* @font-face {
+  font-family: 'MyWebFont';
+  src: url('myfont.woff2') format('woff2'),
+       url('myfont.woff') format('woff'),
+       url('myfont.ttf') format('truetype');
+} */
 
 *{
     margin: 0;
@@ -14,12 +22,12 @@
 }
 
 #main-body{
-    font-family: "TT-Firs-Neue-Trial-Medium";
+    font-family: url('/static/fonts/TT Firs Neue Trial Medium.ttf') /* "TT-Firs-Neue-Trial-Medium", sans-serif; */
 }
 
 body{
     width: 100%;
-    font-family: 'TT-Firs-Neue-Trial-Medium';
+    font-family: 'TT-Firs-Neue-Trial-Medium', sans-serif;
 }
 
 p{
@@ -68,7 +76,7 @@ p{
 }
 
 .hero-banner{
-    background: url(/static/img/hero-banner-img.jpg) no-repeat;
+    background: url(/static/img/hero-banner.jpg) no-repeat;
     background-size: cover;
     height: 80vh;
     position: center;
