--- a/templates/index.html
+++ b/templates/index.html
@@ -145,11 +145,11 @@
         <div class="footer-items">
             <div class="footer lozad">
                 <h1>CONTACT INFO</h1>
-                <p><img src="/static/img/user.svg" alt=""> Cofie Bekoe Ministries</p>
-                <p><img src="/static/img/home.svg" alt=""> Taifa, Hallelujah Junction</p>
+                <p><img src="{% static './img/user.svg' %}" alt=""> Cofie Bekoe Ministries</p>
+                <p><img src="{% static './img/home.svg' %}" alt=""> Taifa, Hallelujah Junction</p>
                 <br>
-                <p><img src="/static/img/phone.svg" alt=""> +233556978861</p>
-                <p><img src="/static/img/mail.svg" alt=""> cofiebekoeministries@gmail.com</p>
+                <p><img src="{% static './img/phone.svg' %}" alt=""> +233556978861</p>
+                <p><img src="{% static './img/mail.svg' %}" alt=""> cofiebekoeministries@gmail.com</p>
             </div>
             <div class="footer lozad">
                 <h1>CHURCH HOURS</h1>
@@ -162,7 +162,7 @@
             <div class="footer lozad">
                 <h1>FIND US ON SOCIAL MEDIA</h1>
                 <span class="social-links">
-                    <a href="https://www.facebook.com/100070673075307/posts/267725212259913/?mibextid=rS40aB7S9Ucbxw6v"><img src="/static/img/facebook.svg" alt="">
+                    <a href="https://www.facebook.com/100070673075307/posts/267725212259913/?mibextid=rS40aB7S9Ucbxw6v"><img src="{% static './img/facebook.svg' %}" alt="">
                     </a>
                     <a href="#"><img src="{% static './img/tweeticon.svg' %}" alt=""></a>
                     <a href="https://instagram.com/cofiebekoe?igshid=YmMyMTA2M2Y="><img src="{% static './img/insta.svg' %}" alt=""></a>
